Customer_Detailed_Id  in eDetailing issues are fixed.

--- a/HiDoctorApp/Views/MoreViewController.storyboard
+++ b/HiDoctorApp/Views/MoreViewController.storyboard
@@ -1217,7 +1217,7 @@
                                     <constraint firstItem="VGa-HR-jer" firstAttribute="leading" secondItem="jPH-6D-Vhb" secondAttribute="leading" id="pM1-ot-sex"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p1a-yM-J6u">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p1a-yM-J6u">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eFV-eC-xOf">
