Pevonia final commit in FEB 2020

--- a/HiDoctorApp/Views/AssetsPlayViewController.storyboard
+++ b/HiDoctorApp/Views/AssetsPlayViewController.storyboard
@@ -371,7 +371,7 @@
                                                     <action selector="didTapPreviewCloseBtn:" destination="h5d-gh-G7m" eventType="touchUpInside" id="GhD-rf-P8y"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="This is for preview purpose, customer details would not be saved." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tgn-lq-OrT">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="This is for preview purpose, contact details would not be saved." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tgn-lq-OrT">
                                                 <rect key="frame" x="10" y="0.0" width="240" height="100"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
