--- a/HiDoctorApp/Views/DoctorVisit/DoctorMasterController.storyboard
+++ b/HiDoctorApp/Views/DoctorVisit/DoctorMasterController.storyboard
@@ -1211,7 +1211,7 @@
                                             <constraint firstAttribute="width" constant="24" id="aaw-Qk-LRH"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Partner Position" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vp-ff-eJO">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Contact Position" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vp-ff-eJO">
                                         <rect key="frame" x="47" y="0.0" width="170" height="50"/>
                                         <fontDescription key="fontDescription" name="SFUIText-Regular" family="SF UI Text" pointSize="15"/>
                                         <nil key="textColor"/>
@@ -1360,7 +1360,6 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dKo-KP-ytE" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="qJS-Uf-S24">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
